test/parser/traits/impl_decl_fn_without_body.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
struct S {
  impl A {
    // CHECK: [[# @LINE + 1 ]]:13: error: expected function body
    fn foo();
  }
}
